Added CtrlPanel,LightPanel and Added function to replace panels

--- a/AchSmartHome_Management/AchSmartHome_Management/AchSmartHome_Management.csproj
+++ b/AchSmartHome_Management/AchSmartHome_Management/AchSmartHome_Management.csproj
@@ -64,6 +64,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="LightPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="LightPanel.Designer.cs">
+      <DependentUpon>LightPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ConnectForm.resx">
@@ -75,6 +81,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LightPanel.resx">
+      <DependentUpon>LightPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -83,6 +92,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -96,6 +106,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="pictures\flower.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="pictures\humidity.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="pictures\light.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="pictures\temperature.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
