--- a/AchSmartHome_Management/AchSmartHome_Management/App.config
+++ b/AchSmartHome_Management/AchSmartHome_Management/App.config
@@ -25,6 +25,9 @@
             <setting name="language" serializeAs="String">
                 <value>RU</value>
             </setting>
+            <setting name="auto_upd_values" serializeAs="String">
+                <value>True</value>
+            </setting>
         </AchSmartHome_Management.Properties.Settings>
     </userSettings>
 </configuration>
