--- a/AchSmartHome_Management/AchSmartHome_Management/Properties/Settings.settings
+++ b/AchSmartHome_Management/AchSmartHome_Management/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="language" Type="System.String" Scope="User">
       <Value Profile="(Default)">RU</Value>
     </Setting>
+    <Setting Name="auto_upd_values" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
