--- a/AchSmartHome_Management/AchSmartHome_Management/AchSmartHome_Management.csproj
+++ b/AchSmartHome_Management/AchSmartHome_Management/AchSmartHome_Management.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>LightPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Logging.cs" />
+    <Compile Include="MyStack.cs" />
     <Compile Include="OtherSensorsPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
