--- a/AchSmartHome_Management/AchSmartHome_Management/App.config
+++ b/AchSmartHome_Management/AchSmartHome_Management/App.config
@@ -28,6 +28,9 @@
             <setting name="auto_upd_values" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="show_nav_panel" serializeAs="String">
+                <value>True</value>
+            </setting>
         </AchSmartHome_Management.Properties.Settings>
     </userSettings>
 </configuration>
