--- a/AchSmartHome_Management/AchSmartHome_Management/Properties/Settings.settings
+++ b/AchSmartHome_Management/AchSmartHome_Management/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="auto_upd_values" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="show_nav_panel" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
