--- a/AchSmartHome_Management/AchSmartHome_Management/Properties/Settings.settings
+++ b/AchSmartHome_Management/AchSmartHome_Management/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="cookie_passhash" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="version" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">ASH Management v.1.0.0 by DarkCat09</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
